Bug 605808 - Make "layers.prefer-opengl" work when D3D10 is available; r=joedrew